--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/shanmugamr/Documents/Studies/ST/JUnitParams-1.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/JUnitParams-1.0.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
