Configs added for A05

--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/JUnitParams-1.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-server-standalone-3.12.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
