--- a/sharedUIMap/SharedUIMap.properties
+++ b/sharedUIMap/SharedUIMap.properties
@@ -3,63 +3,40 @@
 # Referenced by XPath Locator
 Txt_Login_Username = .//*[@id='username']
 
-# Referenced by Id Locator
-Txt_Login_Password = password
-Btn_Login_Login =login
-
-################ Search Hotel Page Elements #########
-
-# Referenced by Id Locator
-Btn_SearchHotel_Search = Submit
-Lst_SearchHotel_Location = location
-Lst_SearchHotel_Hotels = hotels
-Lst_SearchHotel_Room_Type = room_type
-Lst_SearchHotel_Room_Nos = room_nos
-Lst_SearchHotel_Check_In_Date = datepick_in
-Lst_SearchHotel_Check_Out_Date = datepick_out
-Lst_SearchHotel_Adult_Room = adult_room
-Lst_SearchHotel_Child_Room = child_room
-Lbl_SearchHotel_WelcomeMessage = username_show
-
-################ Select Hotel Page Elements #########
+# Referenced by XPath Locator
+Txt_Login_Password = .//*[@id='password']
+Btn_Login_Login =html/body/div[1]/div/form/input[1]
+Btn_Login_clear = html/body/div[1]/div/form/input[2]
+Btn_userHome_logout = html/body/div[1]/h1/a[2]
+################ User Registration Page #########
 
 # Referenced by Id Locator
-Rad_SelectHotel_RadioButton_0 = radiobutton_0
-Rad_SelectHotel_RadioButton_1 = radiobutton_1
-Rad_SelectHotel_RadioButton_2 = radiobutton_2
-Rad_SelectHotel_RadioButton_3 = radiobutton_3
-Rad_SelectHotel_RadioButton_4 = radiobutton_4
-Btn_SelectHotel_Continue = continue
-Lnk_SelectHotel_Logout = Logout
 
+Btn_reg_login=.//*[@id='login']
+Txt_reg_UserName = html/body/div[1]/form/div[1]/div[1]/input
+Txt_reg_usererror=.//*[@id='user_errorMessage']
+Txt_reg_password = html/body/div[1]/form/div[2]/div[1]/input
+Txt_reg_passworderror=.//*[@id='password_errorMessage']
+Txt_reg_confirmpassword = html/body/div[1]/form/div[3]/div[1]/input
+Txt_reg_confirmpasserror=.//*[@id='cPassword_errorMessage']
+Txt_reg_firstname = html/body/div[1]/form/div[4]/div[1]/input
+Txt_reg_firstnameerror =.//*[@id='fname_errorMessage']
+Txt_reg_lastname = html/body/div[1]/form/div[5]/div[1]/input
+Txt_reg_lastnameerror=.//*[@id='lname_errorMessage']
+Txt_reg_UTAID = html/body/div[1]/form/div[6]/div[1]/input
+Txt_reg_IDerror=.//*[@id='id_errorMessage']
+Txt_reg_UserRole = html/body/div[1]/form/div[7]/div[1]/select
+Txt_reg_phone = html/body/div[1]/form/div[8]/div[1]/input
+Txt_reg_phoneerror=.//*[@id='phone_errorMessage']
+Txt_reg_email = html/body/div[1]/form/div[9]/div[1]/input
+TXt_reg_emailerror=.//*[@id='email_errorMessage']
+Txt_reg_address = html/body/div[1]/form/div[10]/div[1]/input
+Txt_reg_addresserror=.//*[@id='address_errorMessage']
+Txt_reg_city = html/body/div[1]/form/div[11]/div[1]/input
+Txt_reg_cityerror=.//*[@id='city_errorMessage']
+Txt_reg_state =html/body/div[1]/form/div[12]/div[1]/select
+Txt_reg_zipcode =html/body/div[1]/form/div[13]/div[1]/input
+Txt_reg_zipcodeerror=.//*[@id='zip_errorMessage']
+Btn_reg_register=html/body/div[1]/form/button[1]
+Btn_reg_reset=html/body/div[1]/form/button[2]
 
-################ Booking Hotel Page Elements #########
-
-# Referenced by Id Locator
-Txt_BookingHotel_FirstName = first_name
-Txt_BookingHotel_LastName = last_name
-Txt_BookingHotel_Address = address
-Txt_BookingHotel_CCNumber = cc_num
-Lst_BookingHotel_CCType = cc_type
-Lst_BookingHotel_CCExpMonth = cc_exp_month
-Lst_BookingHotel_CCExpYear = cc_exp_year
-Txt_BookingHotel_CCCvvNumber = cc_cvv
-Btn_BookingHotel_BookNow = book_now
-Txt_BookingHotel_OrderNo = order_no
-Btn_BookingHotel_Logout = logout
-Lnk_BookingHotel_Logout = Logout
-Btn_BookingHotel_MyItinerary = my_itinerary
-Btn_BookingHotel_SearchHotel = search_hotel
-
-################ Booked Itinerary Elements #########
-
-# Referenced by Id Locator
-Txt_BookedItinerary_SearchOrderid= order_id_text
-Btn_BookedItinerary_Go = search_hotel_id
-Btn_BookedItinerary_Cancel = reg_button
-Btn_BookedItinerary_Logout = logout
-
-################ Logout Elements #########
-
-# Referenced by Id Locator
-Lnk_Logout_ClickHeretoLoginAgain = Click here to login again
