Registration test added

--- a/sharedUIMap/SharedUIMap.properties
+++ b/sharedUIMap/SharedUIMap.properties
@@ -1,42 +1,167 @@
 ################ Login Page Elements #########
 
 # Referenced by XPath Locator
-Txt_Login_Username = .//*[@id='username']
 
-# Referenced by XPath Locator
+Txt_Login_Username = .//*[@id='username']
 Txt_Login_Password = .//*[@id='password']
 Btn_Login_Login =html/body/div[1]/div/form/input[1]
-Btn_Login_clear = html/body/div[1]/div/form/input[2]
-Btn_userHome_logout = html/body/div[1]/h1/a[2]
+Btn_Login_Clear = html/body/div[1]/div/form/input[2]
+Btn_Home_Register = html/body/div[1]/div/form/a
+Txt_Login_LoginError = .//*[@id='login_errorMessage']
+Txt_Login_PasswordError = .//*[@id='password_errorMessage']
+Btn_UserHome_Logout = html/body/div[1]/h1/a
+
 ################ User Registration Page #########
 
-# Referenced by Id Locator
+# Referenced by Xpath Locator
 
-Btn_reg_login=.//*[@id='login']
-Txt_reg_UserName = html/body/div[1]/form/div[1]/div[1]/input
-Txt_reg_usererror=.//*[@id='user_errorMessage']
-Txt_reg_password = html/body/div[1]/form/div[2]/div[1]/input
-Txt_reg_passworderror=.//*[@id='password_errorMessage']
-Txt_reg_confirmpassword = html/body/div[1]/form/div[3]/div[1]/input
-Txt_reg_confirmpasserror=.//*[@id='cPassword_errorMessage']
-Txt_reg_firstname = html/body/div[1]/form/div[4]/div[1]/input
-Txt_reg_firstnameerror =.//*[@id='fname_errorMessage']
-Txt_reg_lastname = html/body/div[1]/form/div[5]/div[1]/input
-Txt_reg_lastnameerror=.//*[@id='lname_errorMessage']
-Txt_reg_UTAID = html/body/div[1]/form/div[6]/div[1]/input
-Txt_reg_IDerror=.//*[@id='id_errorMessage']
-Txt_reg_UserRole = html/body/div[1]/form/div[7]/div[1]/select
-Txt_reg_phone = html/body/div[1]/form/div[8]/div[1]/input
-Txt_reg_phoneerror=.//*[@id='phone_errorMessage']
-Txt_reg_email = html/body/div[1]/form/div[9]/div[1]/input
-TXt_reg_emailerror=.//*[@id='email_errorMessage']
-Txt_reg_address = html/body/div[1]/form/div[10]/div[1]/input
-Txt_reg_addresserror=.//*[@id='address_errorMessage']
-Txt_reg_city = html/body/div[1]/form/div[11]/div[1]/input
-Txt_reg_cityerror=.//*[@id='city_errorMessage']
-Txt_reg_state =html/body/div[1]/form/div[12]/div[1]/select
-Txt_reg_zipcode =html/body/div[1]/form/div[13]/div[1]/input
-Txt_reg_zipcodeerror=.//*[@id='zip_errorMessage']
-Btn_reg_register=html/body/div[1]/form/button[1]
-Btn_reg_reset=html/body/div[1]/form/button[2]
+Btn_Register_Login=.//*[@id='login']
+Txt_Register_UserName = html/body/div[1]/form/div[1]/div[1]/input
+Txt_Register_UserNameError=.//*[@id='user_errorMessage']
+Txt_Register_Password = html/body/div[1]/form/div[2]/div[1]/input
+Txt_Register_PasswordError=.//*[@id='password_errorMessage']
+Txt_Register_ConfirmPassword = html/body/div[1]/form/div[3]/div[1]/input
+Txt_Register_ConfirmPassError=.//*[@id='cPassword_errorMessage']
+Txt_Register_FirstName = html/body/div[1]/form/div[4]/div[1]/input
+Txt_Register_FirstNameError =.//*[@id='fname_errorMessage']
+Txt_Register_LastName = html/body/div[1]/form/div[5]/div[1]/input
+Txt_Register_LastNameError=.//*[@id='lname_errorMessage']
+Txt_Register_UTAID = html/body/div[1]/form/div[6]/div[1]/input
+Txt_Register_UTAIDError=.//*[@id='id_errorMessage']
+Txt_Register_UserRole = html/body/div[1]/form/div[7]/div[1]/select
+Txt_Register_Phone = html/body/div[1]/form/div[8]/div[1]/input
+Txt_Register_PhoneError=.//*[@id='phone_errorMessage']
+Txt_Register_Email = html/body/div[1]/form/div[9]/div[1]/input
+TXt_Register_EmailError=.//*[@id='email_errorMessage']
+Txt_Register_Address = html/body/div[1]/form/div[10]/div[1]/input
+Txt_Register_AddressError=.//*[@id='address_errorMessage']
+Txt_Register_City = html/body/div[1]/form/div[11]/div[1]/input
+Txt_Register_CityError=.//*[@id='city_errorMessage']
+Txt_Register_State =html/body/div[1]/form/div[12]/div[1]/select
+Txt_Register_Zipcode =html/body/div[1]/form/div[13]/div[1]/input
+Txt_Register_ZipcodeError=.//*[@id='zip_errorMessage']
+Btn_Register_Register=html/body/div[1]/form/button[1]
+Btn_Register_Reset=html/body/div[1]/form/button[2]
+Btn_Register_RegisterSuccess=.//*[@id='login_link'] 
 
+################ View/Modify Profile #########
+
+# Referenced by Xpath Locator
+Btn_Profile_Home_page=html/body/div[1]/h1/a[1]
+Btn_Profile_edit=.//*[@id='edit']
+Btn_Profile_logout=html/body/div[1]/h1/a
+Txt_Profile_username = .//*[@id='username']
+Txt_Profile_password = .//*[@id='password']
+Txt_Profile_passworderror = .//*[@id='password_errorMessage']
+Txt_Profile_confirmpassword = .//*[@id='confirm']
+Txt_Profile_confirmpassworderror = .//*[@id='cPassword_errorMessage']
+Txt_Profile_firstname=.//*[@id='firstname']
+Txt_Profile_firstnameerror=.//*[@id='fname_errorMessage']
+Txt_Profile_lastname=.//*[@id='lastname']
+Txt_Profile_lastnameerror=.//*[@id='lname_errorMessage']
+Txt_Profile_UTAID=.//*[@id='id']
+Txt_Profile_UTAIDerror=.//*[@id='id_errorMessage']
+Txt_Profile_userrole=.//*[@id='role']
+Txt_Profile_phone=.//*[@id='phone']
+Txt_Profile_phoneerror=.//*[@id='phone_errorMessage']
+Txt_Profile_email=.//*[@id='email']
+Txt_Profile_emailerror=.//*[@id='email_errorMessage']
+Txt_Profile_address=.//*[@id='address']
+Txt_Profile_addresserror=.//*[@id='address_errorMessage']
+Txt_Profile_city=.//*[@id='city']
+Txt_Profile_cityerror=.//*[@id='city_errorMessage']
+Txt_Profile_state=.//*[@id='state']
+Txt_Profile_zipcode=.//*[@id='zip']
+Txt_Profile_zipcodeerror=.//*[@id='zip_errorMessage']
+Btn_Profile_Update=.//*[@id='update']
+
+################ Report a Problem page #########
+
+# Referenced by Xpath Locator
+Txt_Report_facilityname = .//*[@id='fname']
+Txt_Report_description=html/body/div[1]/form/div[2]/div[1]/input
+TXt_Report_descriptionerror=.//*[@id='login_errorMessage']
+Txt_Report_report = html/body/div[1]/form/button[1]
+Txt_Report_reset = html/body/div[1]/form/button[2]
+
+################ Report submitted Redirection page #########
+
+# Referenced by Xpath Locator
+Btn_backtohomagepage=.//*[@id='userhome']
+
+################ Search Problem page #########
+
+# Referenced by Xpath Locator
+
+Btn_Search_homepage = html/body/div[1]/h1/a[1]
+Btn_Search_logout = html/body/div[1]/h1/a[2]
+
+################ Report Details page #########
+
+# Referenced by Xpath Locator
+
+Btn_ReportDetails_back=html/body/div[1]/h1[1]/a
+Btn_ReportDetails_homepage=html/body/div[1]/h1[2]/a[1]
+Btn_ReportDetails_logout=html/body/div[1]/h1[2]/a[2]
+Txt_ReportDetails_marnumber=.//*[@id='marnumber']
+Txt_ReportDetails_facilitytype=.//*[@id='type']
+Txt_ReportDetails_description=.//*[@id='description']
+Txt_ReportDetails_Datecreated=.//*[@id='datecreated']
+Txt_ReportDetails_marstatus=.//*[@id='status']
+
+
+################ Repairer Homepage #########
+
+# Referenced by Xpath Locator
+Btn_Repairer_viewprofile = html/body/div[1]/a[1]
+Btn_Repairer_searchformar= html/body/div[1]/a[2]
+Btn_Repairer_viewrepairer= html/body/div[1]/a[3]
+btn_Repairer_logout=html/body/div[1]/h1/a
+
+################ Repairer ListMars #########
+
+# Referenced by Xpath Locator
+Btn_List_homepage = html/body/h1/a[1]
+Btn_List_logout = html/body/h1/a[2]
+Btn_List_viewmar= .//*[@id='submit']
+
+################ Repairer MarDetails #########
+
+# Referenced by Xpath Locator
+Btn_MarDetails_back=html/body/div[1]/h1[1]/a
+Btn_MarDetails_homepage = html/body/div[1]/h1[2]/a[1]
+Btn_MarDetails_editdetails = .//*[@id='edit']
+Btn_MarDetails_logout= html/body/div[1]/h1[2]/a[2]
+Txt_MarDetails_marnumber=.//*[@id='marnumber']
+Txt_MarDetails_facilitytype=.//*[@id='type']
+Txt_mardetsils_reservationid=.//*[@id='rid']
+Txt_MarDetails_reportedby=.//*[@id='reportedby']
+Txt_MarDetails_urgency=.//*[@id='urgency']
+Txt_MarDetails_description=.//*[@id='description']
+Txt_MarDetails_datecreated=.//*[@id='datecreated']
+Txt_MarDetails_assignedto=.//*[@id='assignedto']
+Txt_MarDetails_estimatedtime=.//*[@id='time']
+Txt_MarDetails_marstatus=.//*[@id='time']
+Btn_MarDetails_requestmar=.//*[@id='updatemar']
+
+################ Repairer viewassignedrepairs #########
+
+# Referenced by Xpath Locator
+Btn_List_homepage = html/body/h1/a[1]
+Btn_List_logout = html/body/h1/a[2]
+Btn_List_viewrepairdetails= .//*[@id='submit']
+
+################ Repairer viewassignedrepairs #########
+
+# Referenced by Xpath Locator
+Btn_ListRepair_homepage = html/body/h1/a[1]
+Btn_ListRepair_edit=.//*[@id='edit']
+Btn_ListRepair_logout = html/body/h1/a[2]
+Txt_ListRepair_marnumber=.//*[@id='marnumber']
+Txt_ListRepair_facilitytype=.//*[@id='type']
+Txt_ListRepair_urgency=.//*[@id='urgency']
+Txt_ListRepair_description=.//*[@id='description']
+Txt_ListRepair_datecreated=.//*[@id='datecreated']
+Txt_ListRepair_estimatedtime=.//*[@id='time']
+Txt_ListRepair_accept/deny=.//*[@id='request']
+Btn_ListRepair_updatemar=.//*[@id='updatemar']
