--- a/sharedUIMap/SharedUIMap.properties
+++ b/sharedUIMap/SharedUIMap.properties
@@ -16,8 +16,8 @@ Btn_UserHome_Logout = html/body/div[1]/h1/a
 # Referenced by Xpath Locator
 
 Btn_Register_Login=.//*[@id='login']
-Txt_Register_UserName = html/body/div[1]/form/div[1]/div[1]/input
-Txt_Register_UserNameError=.//*[@id='user_errorMessage']
+Txt_Register_Username = html/body/div[1]/form/div[1]/div[1]/input
+Txt_Register_UsernameError=.//*[@id='user_errorMessage']
 Txt_Register_Password = html/body/div[1]/form/div[2]/div[1]/input
 Txt_Register_PasswordError=.//*[@id='password_errorMessage']
 Txt_Register_ConfirmPassword = html/body/div[1]/form/div[3]/div[1]/input
@@ -28,7 +28,7 @@ Txt_Register_LastName = html/body/div[1]/form/div[5]/div[1]/input
 Txt_Register_LastNameError=.//*[@id='lname_errorMessage']
 Txt_Register_UTAID = html/body/div[1]/form/div[6]/div[1]/input
 Txt_Register_UTAIDError=.//*[@id='id_errorMessage']
-Txt_Register_UserRole = html/body/div[1]/form/div[7]/div[1]/select
+Select_Register_UserRole = html/body/div[1]/form/div[7]/div[1]/select
 Txt_Register_Phone = html/body/div[1]/form/div[8]/div[1]/input
 Txt_Register_PhoneError=.//*[@id='phone_errorMessage']
 Txt_Register_Email = html/body/div[1]/form/div[9]/div[1]/input
@@ -37,7 +37,7 @@ Txt_Register_Address = html/body/div[1]/form/div[10]/div[1]/input
 Txt_Register_AddressError=.//*[@id='address_errorMessage']
 Txt_Register_City = html/body/div[1]/form/div[11]/div[1]/input
 Txt_Register_CityError=.//*[@id='city_errorMessage']
-Txt_Register_State =html/body/div[1]/form/div[12]/div[1]/select
+Select_Register_State =html/body/div[1]/form/div[12]/div[1]/select
 Txt_Register_Zipcode =html/body/div[1]/form/div[13]/div[1]/input
 Txt_Register_ZipcodeError=.//*[@id='zip_errorMessage']
 Btn_Register_Register=html/body/div[1]/form/button[1]
@@ -78,11 +78,13 @@ Btn_Profile_Update=.//*[@id='update']
 ################ Report a Problem page #########
 
 # Referenced by Xpath Locator
-Txt_Report_facilityname = .//*[@id='fname']
-Txt_Report_description=html/body/div[1]/form/div[2]/div[1]/input
-TXt_Report_descriptionerror=.//*[@id='login_errorMessage']
-Txt_Report_report = html/body/div[1]/form/button[1]
-Txt_Report_reset = html/body/div[1]/form/button[2]
+Select_Report_FacilityName = .//*[@id='fname']
+Txt_Report_Description=html/body/div[1]/form/div[2]/div[1]/input
+Txt_Report_DescriptionError=.//*[@id='description_errorMessage']
+Btn_Report_Problem = html/body/div[1]/a[2]
+Btn_Report_Report = html/body/div[1]/form/button[1]
+Btn_Report_Reset = html/body/div[1]/form/button[2]
+Txt_Report_Success = //*[@id="userhome"]
 
 ################ Report submitted Redirection page #########
 
