Repairer Web Driver test added

--- a/sharedUIMap/SharedUIMap.properties
+++ b/sharedUIMap/SharedUIMap.properties
@@ -84,12 +84,17 @@ Txt_Report_DescriptionError=.//*[@id='description_errorMessage']
 Btn_Report_Problem = html/body/div[1]/a[2]
 Btn_Report_Report = html/body/div[1]/form/button[1]
 Btn_Report_Reset = html/body/div[1]/form/button[2]
-Txt_Report_Success = //*[@id="userhome"]
 
-################ Report submitted Redirection page #########
+
+################ Report Submitted Redirection page #########
 
 # Referenced by Xpath Locator
-Btn_backtohomagepage=.//*[@id='userhome']
+Btn_Report_Success = //*[@id="userhome"]
+
+################ Admin Home page #########
+
+# Referenced by Xpath Locator
+#Btn_Report_Success = //*[@id="userhome"]
 
 ################ Search Problem page #########
 
@@ -115,23 +120,25 @@ Txt_ReportDetails_marstatus=.//*[@id='status']
 ################ Repairer Homepage #########
 
 # Referenced by Xpath Locator
-Btn_Repairer_viewprofile = html/body/div[1]/a[1]
-Btn_Repairer_searchformar= html/body/div[1]/a[2]
-Btn_Repairer_viewrepairer= html/body/div[1]/a[3]
-btn_Repairer_logout=html/body/div[1]/h1/a
+Btn_Repairer_ViewProfile = html/body/div[1]/a[1]
+Btn_Repairer_SearchForMar= html/body/div[1]/a[2]
+Btn_Repairer_ViewRepairs= html/body/div[1]/a[3]
+Btn_Repairer_Logout=html/body/div[1]/h1/a
 
 ################ Repairer ListMars #########
 
 # Referenced by Xpath Locator
-Btn_List_homepage = html/body/h1/a[1]
-Btn_List_logout = html/body/h1/a[2]
-Btn_List_viewmar= .//*[@id='submit']
+Btn_List_Homepage = html/body/h1/a[1]
+Btn_List_Logout = html/body/h1/a[2]
+List_Table_Repairs = html/body/div[1]/form/div
+#Rad_SelectMar_RadioButton
+Btn_List_ViewMarDetails= .//*[@id='submit']
 
 ################ Repairer MarDetails #########
 
 # Referenced by Xpath Locator
 Btn_MarDetails_back=html/body/div[1]/h1[1]/a
-Btn_MarDetails_homepage = html/body/div[1]/h1[2]/a[1]
+Btn_MarDetails_Homepage = html/body/div[1]/h1[2]/a[1]
 Btn_MarDetails_editdetails = .//*[@id='edit']
 Btn_MarDetails_logout= html/body/div[1]/h1[2]/a[2]
 Txt_MarDetails_marnumber=.//*[@id='marnumber']
