All scenarios test added

--- a/sharedUIMap/SharedUIMap.properties
+++ b/sharedUIMap/SharedUIMap.properties
@@ -178,7 +178,7 @@ Btn_ListRepair_updatemar=.//*[@id='updatemar']
 ################ FMS Manager Home #########
 
 Btn_FMShome_ViewModifyProfileDetails = html/body/div[1]/a[1]
-Btn_FMShome_SearchUnassignedMarAssignMar = html/body/div[1]/a[2]
+Btn_FMShome_SearchUnassignedMar = html/body/div[1]/a[2]
 Btn_FMShome_SearchForAssignedRepairs = html/body/div[1]/a[3]
 Btn_FMShome_SearchViewFacilityDetails = html/body/div[1]/a[4]
 Btn_FMShome_AddANewFacility = html/body/div[1]/a[5]
@@ -202,15 +202,16 @@ Txt_MARDetails_MARnumber = .//*[@id='marnumber']
 Txt_MARDetails_FacilityType = .//*[@id='type']
 Txt_MARDetails_ReservationID = .//*[@id='rid']
 Txt_MARDetails_ReportedBy = .//*[@id='reportedby']
-Txt_MARDetails_Urgency = .//*[@id='urgency']
+Select_MARDetails_Urgency = .//*[@id='urgency']
 Txt_MARDetails_Description = .//*[@id='description']
 Txt_MARDetails_DateCreated = .//*[@id='datecreated']
 Txt_MARDetails_AssignedTo = .//*[@id='assignedto']
 Txt_MARDetails_AssignedToError= .//*[@id='assignedToErrorMessage']
-List_MARDetails_EstimatedTime = .//*[@id='time']
+Select_MARDetails_EstimatedTime = .//*[@id='time']
 Txt_MARDetails_MARStatus = .//*[@id='status']
 Txt_MARDetails_MARStatus_Errormsg = .//*[@id='assignMarErrorMessage']
 Btn_MARDetails_UpdateMARDetails = .//*[@id='updatemar']
+
 
  
 
